tests/expectations/compiler/group/mult_by_group_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372007]: Expected one type from `scalar`, but got `group`
    --> compiler-test:5:30
     |
   5 |         return (_, _)group * a;
     |                              ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
